--- a/test/index.html
+++ b/test/index.html
@@ -16,8 +16,7 @@
       </nav>
     </header>
     <main>
-      <img src="#" alt="Logo" />
-
+      <h1>FashionRus</h1>
       <h2>Categories</h2>
       <section class="category_list_container">
         <ul>
