--- a/test/produkt.html
+++ b/test/produkt.html
@@ -5,5 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Logo</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="productlist.html">Products</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <img src="img/1569.webp" alt="pants" />
+        <h2>Product</h2>
+        <p>
+          These sports pants are designed for comfort and performance. Made with breathable, moisture-wicking fabric, they keep you cool and dry during workouts. The elastic waistband ensures a snug fit, while the lightweight material allows for full
+          range of motion. Perfect for running, training, or casual wear.
+        </p>
+      </section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
