--- a/test/produkt.html
+++ b/test/produkt.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="css/stylesheet.css" />
   </head>
   <body>
     <header>
@@ -16,13 +17,39 @@
       </nav>
     </header>
     <main>
-      <section>
+      <section class="grid_1-1">
         <img src="img/1569.webp" alt="pants" />
-        <h2>Product</h2>
-        <p>
-          These sports pants are designed for comfort and performance. Made with breathable, moisture-wicking fabric, they keep you cool and dry during workouts. The elastic waistband ensures a snug fit, while the lightweight material allows for full
-          range of motion. Perfect for running, training, or casual wear.
-        </p>
+
+        <div>
+          <h2>Long Shorts</h2>
+          <h3>Product Information</h3>
+          <p>
+            Our sport shorts are made from a blend of 90% polyester and 10% spandex, offering a perfect combination of comfort and flexibility. Designed with moisture-wicking and breathable fabric, they help keep you dry and cool during intense
+            activities. The lightweight material ensures a full range of motion, making them ideal for running, gym workouts, or casual wear. The elastic waistband provides a secure and adjustable fit, ensuring the shorts stay in place as you move.
+            Available in multiple sizes (Small to X-Large) and colors (Black, Navy, Grey, Red), these shorts are easy to care for with machine wash and tumble dry instructions. Whether you're an athlete or just someone who enjoys staying active,
+            these shorts are a must-have addition to your wardrobe.
+          </p>
+
+          <div>
+            <h3>Material and Care</h3>
+            <p>These sports pants are made of polyester and spandex for durability and comfort. They’re moisture-wicking and easy to care for—just machine wash cold and tumble dry on low.</p>
+          </div>
+          <div>
+            <h3>Brand</h3>
+            <p>Nike</p>
+          </div>
+
+          <h2>599kr</h2>
+
+          <label for="size">Choose size:</label>
+          <select id="size" name="size">
+            <option value="small">Small</option>
+            <option value="medium">Medium</option>
+            <option value="large">Large</option>
+            <option value="xlarge">X-Large</option>
+          </select>
+          <button>Add to Bag</button>
+        </div>
       </section>
     </main>
     <footer></footer>
